fixed image width outside #body .wrap

--- a/sass-media/_utils.scss
+++ b/sass-media/_utils.scss
@@ -58,6 +58,12 @@
   padding: 0 !important;
   clear: both;
   max-width: 100%;
+
+  img {
+    width: 100%;
+    display: block;
+    object-fit: cover;
+  }
 }
 
 #content h2 {
